@@ -42,9 +42,14 @@ function [xi, em, gx, gy] = surface_interpolation(x, PARAM, INTERP, res, KLIM)
 %      approximation, rather than interpolation). Local support with
 %      extrapolation outside the convex hull.
 %
-%      'mba' Multilevel B-Spline Approximation Library by SINTEF ICT [4].
+%      'mba': Multilevel B-Spline Approximation Library by SINTEF ICT [4].
 %      Local support, limited to a rectangle that tighly contains the
 %      scattered points 2D projection on the interpolation domain.
+%
+%      'mbag': Like the 'mba' method, but first a thin-plate spline is used 
+%      to extrapolate values on the interpolation domain boundary. Then MBA
+%      is used for the local support interpolation of X and the boundary
+%      values set by the thin-plate spline.
 %
 %   RES is a 2-vector with the grid spacing in the x- and y-directions. By
 %   default, RES=[1 1].
@@ -70,7 +75,7 @@ function [xi, em, gx, gy] = surface_interpolation(x, PARAM, INTERP, res, KLIM)
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2010-2011 University of Oxford
-% Version: 0.1
+% Version: 0.2
 % 
 % University of Oxford means the Chancellor, Masters and Scholars of
 % the University of Oxford, having an administrative office at
@@ -204,7 +209,24 @@ switch INTERP
             mba_surface_interpolation(em(1, :)', em(2, :)', x(1, :)', gx(:), gy(:)) ...
             mba_surface_interpolation(em(1, :)', em(2, :)', x(2, :)', gx(:), gy(:)) ...
             mba_surface_interpolation(em(1, :)', em(2, :)', x(3, :)', gx(:), gy(:))];
+    case 'mbag' % MBA extrapolated using a TPS
+        % use TPS to interpolate the points, but we are only interested in
+        % the edges and corners of the interpolation, where the TPS is
+        % extrapolating linearly; also, we decimate the points in the edges
+        em2 = [gx(1, 1:end)' gy(1, 1:end)' ; ... % top edge
+            gx(2:end, end) gy(2:end, end) ; ... % right edge
+            gx(end, 1:end-1)' gy(end, 1:end-1)' ; ... % bottom edge
+            gx(2:end-1, 1) gy(2:end-1, 1) ; ... % left edge
+            ]';
+        xi = pts_tps_map(em', x', em2')';
+        x = [x xi(:, 1:10:end)];
+        % local support interpolation with boundary conditions provided by
+        % the TPS
+        em = [em em2(:, 1:10:end)];
+        xi = [...
+            mba_surface_interpolation(em(1, :)', em(2, :)', x(1, :)', gx(:), gy(:)) ...
+            mba_surface_interpolation(em(1, :)', em(2, :)', x(2, :)', gx(:), gy(:)) ...
+            mba_surface_interpolation(em(1, :)', em(2, :)', x(3, :)', gx(:), gy(:))];
     otherwise
         error('Interpolation method not implemented')
 end
-
